# SpellTable

./: .gitignore  CREDITS.md  DEPLOYMENT_SUMMARY.md  DOCKER_README.md  FRONTEND_PROXY_ARCHITECTURE.md  LICENSE.md  MIXED_CONTENT_TROUBLESHOOTING.md  README.md  VOLUMES_README.md  apache-spelltable.conf  deploy.sh  docker-compose.https.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  run.sh  run_frontend.bat  run_on_sl1680.sh  setup-volumes.sh  start_viewer.sh
.github/: pull_request_template.md
.github/workflows/: deploy.yml  mypy.yml  pylint.yml  ruff.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  init_db.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/core/: auth.py  config.py  connection_manager.py  constants.py  database.py  logging.py  model_base.py  tavern_business_table.py  tavern_rules.py  types.py
backend/app/models/: __init__.py  campaign.py  campaign_images.py  campaign_notes.py  campaign_tavern.py  die.py  encounter.py  map.py  monster.py  scenes.py  user.py
backend/app/routes/: __init__.py  audio.py  auth.py  backup.py  campaign_images.py  campaign_notes.py  campaign_tavern.py  campaigns.py  encounters.py  maps.py  monsters.py  scenes.py  websocket.py
backend/app/services/: encounter_service.py  hit_dice_service.py  monster_service.py
backend/app/utils/: maps.py
backend/monsters/: monsters.json
documentation/: APACHE_PROXY_DEPLOYMENT.md  DOCKER_README.md  PRODUCTION_DEPLOYMENT.md
frontend/: .dockerignore  .gitignore  Dockerfile  components.json  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  server.js  tailwind.config.js  tailwind.config.mjs
frontend/public/aoe-effects/: index.json  registry.json
frontend/public/aoe-effects/burning-hands/: meta.json
frontend/public/aoe-effects/licenses/: README.txt
frontend/public/aoe-effects/lightning-bolt/: meta.json
frontend/public/aoe-effects/spirit-guardians/: meta.json
frontend/public/aoe-effects/themes/pixel/call-lightning/: meta.json
frontend/public/aoe-effects/themes/pixel/cloudkill/: meta.json
frontend/public/aoe-effects/themes/pixel/cone-of-cold/: meta.json
frontend/public/aoe-effects/themes/pixel/darkness/: meta.json
frontend/public/aoe-effects/themes/pixel/fireball/: meta.json
frontend/public/aoe-effects/themes/pixel/fog-cloud/: meta.json
frontend/public/aoe-effects/themes/pixel/meteor-swarm/: meta.json
frontend/public/aoe-effects/themes/pixel/spirit-guardians-necrotic/: meta.json
frontend/public/aoe-effects/themes/pixel/spirit-guardians-radiant/: meta.json
frontend/public/aoe-effects/themes/pixel/wall-of-fire/: meta.json
frontend/public/aoe-effects/themes/realistic/fireball/: loop.webm  meta.json
frontend/public/aoe-effects/themes/realistic/fog-cloud/: loop.webm  meta.json
frontend/public/aoe-effects/themes/realistic/licenses/: README.txt
frontend/public/aoe-effects/themes/realistic/lightning-bolt/: loop.webm  meta.json
frontend/public/tavern-seeds/: phandalin-tresendar-manor.json
frontend/src/: globals.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/initiative/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/viewer/: page.tsx
frontend/src/app/viewer/campaigns/: page.tsx
frontend/src/components/: AoEEffectSprite.tsx  AoEEffectVideo.tsx  AoEMarker.tsx  AoEPalette.tsx  BackupDialog.tsx  CampaignDiary.tsx  CampaignManagement.tsx  CampaignSelector.tsx  CombatantToken.tsx  ConnectionStatus.tsx  DisplayCalculator.tsx  EncounterGenerator.tsx  EncounterGeneratorDialog.tsx  EnhancedCampaignDiary.tsx  FogOfWar.tsx  FogOfWarPalette.tsx  GameboardMenu.tsx  InitiativeIndicator.tsx  InitiativeSidebar.tsx  InitiativeTracker.tsx  InitiativeViewerPanel.tsx  LoadSceneDialog.tsx  LoginForm.tsx  LogoutButton.tsx  Map.tsx  MapListSidebar.tsx  MapManagement.tsx  MapUploadDialog.tsx  MeasureOverlay.tsx  MonsterManagement.tsx  MonsterManagementDialog.tsx  MoveEverythingDialog.tsx  NightModeOverlay.tsx  OperationStatusDialog.tsx  ProtectedRoute.tsx  RippleViewer.tsx  SaveSceneDialog.tsx  Scene.tsx  SceneManagement.tsx  Soundboard.tsx  (+4 more)
frontend/src/components/gameboard/: GameboardDock.tsx  GameboardIconButton.tsx  GlassPanel.tsx
frontend/src/components/tavern/: TavernTab.tsx
frontend/src/components/ui/: dialog.tsx  dropdown-menu.tsx  toast.tsx  tooltip.tsx  use-toast.ts
frontend/src/config/: audio.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useNightMode.ts
frontend/src/lib/: aoeEffects.ts
frontend/src/services/: api.ts  auth.ts  encounter_service.ts  maps.ts  monster_service.ts  tavern.ts  websocket.ts
frontend/src/types/: aoeEffect.ts  encounter.ts  map.ts  monster.ts
frontend/src/utils/: aoeCoordinates.ts  api.ts  dice.ts  liveSync.ts  measureDistance.ts  playAreaLayers.ts  tokenFootprint.ts  turnMovementTrail.ts
scripts/: build-aoe-effects-realistic.py  build-aoe-effects.py  emit_phandalin_tavern_catalog.py
scripts/aoe-realistic-sources/fireball/: meta.json
scripts/aoe-realistic-sources/fog-cloud/: meta.json
scripts/aoe-realistic-sources/lightning-bolt/: meta.json
