[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "spelltable-backend"
version = "0.1.0"
description = "Backend for SpellTable"
readme = "README.md"
authors = [
    {name = "SpellTable Team"}
]
requires-python = ">=3.13,<3.14"
license = {text = "SpellTable is dual-licensed under the GNU Affero General Public License v3 (AGPL v3) and a commercial license."}
dependencies = [
    "fastapi==0.115.12",
    "loguru==0.7.3",
    "pydantic==2.11.3",
    "python-engineio>=4.12.0",
    "python-multipart>=0.0.20",
    "python-socketio>=5.13.0",
    "uvicorn==0.34.1",
]

[project.optional-dependencies]
dev = [
    "pylint==3.3.6",
    "pytest==8.3.5",
    "ruff==0.11.5",
    "mypy==1.15.0",
]

[tool.mypy]
# Mypy configuration
python_version = "3.13"
exclude = [".venv", "venv"]

# Use the virtual environment python interpreter
no_site_packages = false
namespace_packages = true

# Strict type checking
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true

[tool.pylint.main]
ignore = [".venv", "venv"]
ignore-patterns = ["^\\.venv.*$", "^venv.*$"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
