[project]
name = "spelltable-backend"
version = "0.1.0"
description = "Backend for SpellTable application"
authors = [
    {name = "SpellTable Team"}
]
requires-python = ">=3.13,<3.14"
license = {text = "SpellTable is dual-licensed under the GNU Affero General Public License v3 (AGPL v3) and a commercial license."}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-socketio>=5.13.0",
    "python-engineio>=4.12.0",
    "python-multipart>=0.0.20",
    "loguru>=0.7.3",
    "pydantic>=2.11.0",
    "bcrypt>=3.2.2,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
