[project]
name = "spelltable-backend"
version = "0.1.0"
description = "Backend for SpellTable application"
authors = [
    {name = "SpellTable Team"}
]
requires-python = ">=3.13,<3.14"
license = {text = "SpellTable is dual-licensed under the GNU Affero General Public License v3 (AGPL v3) and a commercial license."}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-socketio>=5.13.0",
    "python-engineio>=4.12.0",
    "python-multipart>=0.0.20",
    "loguru>=0.7.3",
    "pydantic>=2.11.0",
    "bcrypt>=3.2.2,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pylint>=3.0.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "app.routes.*"
disallow_untyped_defs = false
disable_error_code = ["arg-type", "assignment", "union-attr", "attr-defined", "call-arg", "dict-item"]

[[tool.mypy.overrides]]
module = "app.services.monster_service"
disallow_untyped_defs = false
disable_error_code = ["arg-type", "assignment", "no-untyped-def"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# Pylint default fail-under is 10; ORM/Pydantic-heavy code is noisy without broad disables.
[tool.pylint.main]
fail-under = 9.0

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "too-few-public-methods",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "import-outside-toplevel",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-nested-blocks",
    "broad-exception-caught",
    "redefined-outer-name",
    "wrong-import-position",
    "line-too-long",
]

[tool.pylint.basic]
good-names = ["db", "id", "Run", "_"]
